# turtlesim-pax

./: .gitignore  LICENSE  README.md  pax.toml  pixi.toml
.github/workflows/: ci.yml
src/turtle_controller/: CMakeLists.txt  package.xml  setup.py
src/turtle_controller/script/: controller.py
src/turtle_controller/src/: draw_square.cpp
src/turtle_controller/turtle_controller/: controller.py
src/turtle_controller_cpp_py/: CMakeLists.txt  package.xml
src/turtle_controller_cpp_py/launch/: draw_circle.launch.py  draw_square.launch.py
src/turtle_controller_cpp_py/script/: draw_square
src/turtle_controller_cpp_py/src/: draw_circle.cpp
src/turtle_controller_py/: package.xml  setup.cfg  setup.py
src/turtle_controller_py/turtle_controller_py/: controller.py
